Fix alignment of filter links for mobiles

--- a/ckanext/mapactiontheme/public/mapactiontheme.css
+++ b/ckanext/mapactiontheme/public/mapactiontheme.css
@@ -313,8 +313,16 @@ a:hover {
 
 @media (max-width: 767px) {
   body {
-    padding-left: 0px;
-    padding-right: 0px;
+    padding-left:0;
+    padding-right:0;
+  }
+  [role="main"],
+  .site-footer {
+    padding-left:20px;
+    padding-right:20px;
+  }
+  .toolbar .breadcrumb {
+    margin-left:0;
   }
   .toolbar .breadcrumb, .toolbar .breadcrumb a {
     color: #505050 !important;
@@ -324,9 +332,6 @@ a:hover {
   }
   .list-item-btn {
     position: static;
-  }
-  .module-narrow .module-heading, .module-narrow .module-content, .module-narrow .module-footer {
-    padding-left: 30px;
   }
 }
 
